--- a/index.html
+++ b/index.html
@@ -31,9 +31,19 @@
     <script type="text/javascript">
 
         const video = document.querySelector('#videoElement');
+        video.setAttribute('autoplay', '');
+        video.setAttribute('muted', '');
+        video.setAttribute('playsinline', '');
+
+        const constraints = {
+            audio: false,
+            video: {
+                facingMode: 'user'
+            }
+        }
 
         if (navigator.mediaDevices.getUserMedia) {
-            navigator.mediaDevices.getUserMedia({ video: true })
+            navigator.mediaDevices.getUserMedia(constraints)
                 .then(function (stream) {
                     video.srcObject = stream;
                 })
