add alert on error

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 })
                 .catch(function (err0r) {
                     console.log('Something went wrong!');
+                    alert('Error: ' + err0r);
                 });
         }
 
