--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,10 @@
     <canvas></canvas>
     <div class="controls flex-center">
         <button id="start-timer">Start Timer</button>
-        <button id="stop-timer">Stop Timer</button>
-        <button id="send">Send</button>
-        <button id="redo">Redo</button>
+        <button id="stop-timer" disabled>Stop Timer</button>
+        <button id="email" disabled>Email</button>
+        <button id="text" disabled>Text</button>
+        <button id="redo" disabled>Redo</button>
         <button id="clear">Clear</button>
     </div>
     <script src="assets/js/app.js"></script>
