--- a/client/index.html
+++ b/client/index.html
@@ -11,13 +11,19 @@
 <body class="flex-center">
     <video></video>
     <canvas></canvas>
-    <div class="controls flex-center">
+    <!-- <div class="controls flex-center">
         <button id="start-timer">Start Timer</button>
         <button id="stop-timer" disabled>Stop Timer</button>
         <button id="email" disabled>Email</button>
         <button id="text" disabled>Text</button>
         <button id="redo" disabled>Redo</button>
         <button id="clear">Clear</button>
+    </div> -->
+    <div id="camera-view">
+        <p>Free photobooth-style photos straight to your inbox.</p>
+        <div id="start-timer">
+            
+        </div>
     </div>
     <script src="assets/js/app.js"></script>
 </body>
