setup email test

--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,7 @@
     </div> -->
     <div id="camera-view">
         <p>Free photobooth-style photos straight to your inbox.</p>
-        <div id="start-timer">
-            
-        </div>
+        <button id="sendemail">Send Email</button>
     </div>
     <script src="assets/js/app.js"></script>
 </body>
