--- a/client/index.html
+++ b/client/index.html
@@ -30,8 +30,21 @@
     </div>
 
     <div id="timer" class="fullscreen flex-center">
-        <h1 id="countdown-text">5</h1>
         <button id="stop-timer-btn" class="flex-center">×</button>
+        <div id="timer-progress" class="flex-center">
+            <svg class="progress-ring" width="400" height="400">
+                <circle 
+                    class="progress-ring__circle" 
+                    stroke="white" 
+                    stroke-width="16" 
+                    fill="transparent" 
+                    r="184" 
+                    cx="200"
+                    cy="200" 
+                />
+            </svg>
+        </div>
+        <h1 id="countdown-text">5</h1>
     </div>
 
     <div id="results">
