remove default email

--- a/client/index.html
+++ b/client/index.html
@@ -50,7 +50,7 @@
     <div id="results">
         <button id="back">Back</button>
         <div class="email-input-container">
-            <input type="email" value="jason@redsundigitalkc.com" placeholder="example@email.com" pattern=".+@.+\..+">
+            <input type="email"placeholder="example@email.com" pattern=".+@.+\..+">
             <span id="clear-email" class="flex-center">×</span>
         </div>
         <button id="send-email">Send</button>
